# ex3.2

./: CMakeLists.txt  README.md
include/: default_deleter.hpp  unique_ptr.hpp
tests/: CMakeLists.txt  TestA_SMF_and_get.cpp  TestB_assign_reset_release.cpp  TestC_compare.cpp  TestD_custom_deleter.cpp  TestE_custom_deleter_examples.cpp
